# Mock-Project

./: CMakeLists.txt  ProjectTree.txt
include/controller/: PlaybackController.h
include/model/: MediaFile.h  MediaLibrary.h  MediaMetadata.h  PlaybackHistory.h  Playlist.h
include/service/: PlaylistManager.h
include/service/decoder/: FFmpegAudioDecoder.h  IAudioDecoder.h
include/service/metadata/: IMetadataService.h  TagLibMetadataService.h
include/service/player/: AudioThreadWorker.h  IAudioPlayer.h  SDLAudioPlayer.h
include/service/repository/: IPlaylistRepository.h  JsonPlaylistRepository.h
include/service/scanner/: FileScanner.h  IFileSystem.h  LinuxFileSystem.h
src/: main.cpp
src/controller/: PlaybackController.cpp
src/model/: MediaLibrary.cpp  PlaybackHistory.cpp  Playlist.cpp
src/service/: PlaylistManager.cpp
src/service/decoder/: FFmpegAudioDecoder.cpp
src/service/metadata/: TagLibMetadataService.cpp
src/service/player/: AudioThreadWorker.cpp  SDLAudioPlayer.cpp
src/service/scanner/: FileScanner.cpp  LinuxFileSystem.cpp
src/service/scanner/repository/: JsonPlaylistRepository.cpp
tests/unit/: test_scanner.cpp
